packages/nxuskit-go/include/nxuskit.h


typedef struct NxuskitBnEvidence NxuskitBnEvidence;
typedef struct NxuskitBnNet NxuskitBnNet;
typedef struct NxuskitBnResult NxuskitBnResult;
typedef struct NxuskitProvider NxuskitProvider;
typedef struct NxuskitResponse NxuskitResponse;
typedef struct NxuskitSolverSession NxuskitSolverSession;
typedef struct NxuskitStream NxuskitStream;
typedef int32_t (*NxuskitStreamCallback)(const char *chunk_json, void *user_data);
typedef void (*NxuskitStreamDoneCallback)(const char *final_json, void *user_data);
typedef bool (*NxuskitBnStreamCallback)(const char *chunk_json,
                                        uint32_t iteration,
                                        uint32_t total,
                                        bool is_final,
                                        void *user_data);
const char *nxuskit_version(void);
const char *nxuskit_abi_version(void);
const char *nxuskit_edition(void);
char *nxuskit_capabilities(void);
char *nxuskit_build_info(void);
char *nxuskit_entitlement_info(const char *license_key);
char *nxuskit_license_resolve(const char *explicit_key);
char *nxuskit_license_validate(const char *token_jwt);
char *nxuskit_license_machine_id(void);
char *nxuskit_license_activate(const char *purchase_id);
char *nxuskit_license_deactivate(void);
char *nxuskit_license_trial_issue(void);
char *nxuskit_license_trial_activate(const char *activation_code);
int32_t nxuskit_auth_set_credential(const char *provider_id, const char *api_key);
int32_t nxuskit_auth_remove_credential(const char *provider_id);
char *nxuskit_auth_resolve(const char *provider_id, const char *explicit_key);
char *nxuskit_auth_status(const char *provider_id);
char *nxuskit_auth_status_all(void);
char *nxuskit_auth_providers(void);
struct NxuskitProvider *nxuskit_create_provider(const char *config_json);
void nxuskit_free_provider(struct NxuskitProvider *provider);
struct NxuskitResponse *nxuskit_chat(struct NxuskitProvider *provider, const char *request_json);
const char *nxuskit_response_json(const struct NxuskitResponse *response);
void nxuskit_free_response(struct NxuskitResponse *response);
struct NxuskitStream *nxuskit_chat_stream(struct NxuskitProvider *provider,
                                          const char *request_json,
                                          NxuskitStreamCallback on_chunk,
                                          NxuskitStreamDoneCallback on_done,
                                          void *user_data);
void nxuskit_cancel_stream(struct NxuskitStream *stream);
void nxuskit_free_stream(struct NxuskitStream *stream);
char *nxuskit_list_models(struct NxuskitProvider *provider);
int32_t nxuskit_plugin_load_dir(const char *dir_path);
char *nxuskit_plugin_list(void);
char *nxuskit_plugin_info(const char *name);
int32_t nxuskit_plugin_count(void);
int32_t nxuskit_plugin_loaded(const char *name);
void nxuskit_plugin_unload_all(void);
int32_t nxuskit_plugin_set_trust_mode(int32_t mode);
int32_t nxuskit_plugin_get_trust_mode(void);
int32_t nxuskit_plugin_load_dir_trusted(const char *dir_path);
char *nxuskit_oauth_start(const char *provider_id, uint32_t timeout_secs);
char *nxuskit_oauth_status(const char *provider_id);
int32_t nxuskit_oauth_revoke(const char *provider_id);
const char *nxuskit_last_error(void);
void nxuskit_free_string(char *ptr);
struct NxuskitBnNet *nxuskit_bn_net_create(void);
void nxuskit_bn_net_destroy(struct NxuskitBnNet *net);
struct NxuskitBnNet *nxuskit_bn_net_load_file(const char *path);
int32_t nxuskit_bn_net_num_variables(const struct NxuskitBnNet *net);
char *nxuskit_bn_net_variables(const struct NxuskitBnNet *net);
char *nxuskit_bn_net_variable_states(const struct NxuskitBnNet *net, const char *variable);
struct NxuskitBnEvidence *nxuskit_bn_ev_create(void);
void nxuskit_bn_ev_destroy(struct NxuskitBnEvidence *ev);
bool nxuskit_bn_ev_set_discrete(struct NxuskitBnEvidence *ev,
                                const struct NxuskitBnNet *net,
                                const char *variable,
                                const char *state);
bool nxuskit_bn_ev_retract(struct NxuskitBnEvidence *ev, const char *variable);
bool nxuskit_bn_ev_clear(struct NxuskitBnEvidence *ev);
struct NxuskitBnResult *nxuskit_bn_infer(const struct NxuskitBnNet *net,
                                         const struct NxuskitBnEvidence *ev,
                                         const char *algorithm,
                                         uint32_t num_samples,
                                         uint32_t burn_in,
                                         uint64_t seed);
void nxuskit_bn_result_destroy(struct NxuskitBnResult *result);
char *nxuskit_bn_result_json(const struct NxuskitBnResult *result);
char *nxuskit_bn_result_query(const struct NxuskitBnResult *result, const char *variable);
int32_t nxuskit_bn_result_num_variables(const struct NxuskitBnResult *result);
char *nxuskit_bn_result_next(struct NxuskitBnResult *result);
void nxuskit_bn_result_reset(struct NxuskitBnResult *result);
bool nxuskit_bn_net_save_file(const struct NxuskitBnNet *net, const char *path);
bool nxuskit_bn_ev_set_continuous(struct NxuskitBnEvidence *ev,
                                  const struct NxuskitBnNet *net,
                                  const char *variable,
                                  double value);
bool nxuskit_bn_net_add_gaussian_variable(struct NxuskitBnNet *net,
                                          const char *name,
                                          double mean_base,
                                          double variance);
bool nxuskit_bn_net_set_gaussian_weight(struct NxuskitBnNet *net,
                                        const char *variable,
                                        const char *parent,
                                        double weight);
double nxuskit_bn_result_mean(const struct NxuskitBnResult *result, const char *variable);
double nxuskit_bn_result_variance(const struct NxuskitBnResult *result, const char *variable);
char *nxuskit_bn_result_continuous_marginal(const struct NxuskitBnResult *result,
                                            const char *variable);
struct NxuskitBnResult *nxuskit_bn_infer_with_config(const struct NxuskitBnNet *net,
                                                     const struct NxuskitBnEvidence *ev,
                                                     const char *algorithm,
                                                     const char *config_json);
bool nxuskit_bn_infer_stream(const struct NxuskitBnNet *net,
                             const struct NxuskitBnEvidence *ev,
                             uint32_t num_samples,
                             uint32_t burn_in,
                             uint64_t seed,
                             uint32_t chunk_size,
                             NxuskitBnStreamCallback on_chunk,
                             void *user_data);
bool nxuskit_bn_learn_mle(struct NxuskitBnNet *net, const char *csv_path, double pseudocount);
double nxuskit_bn_log_likelihood(const struct NxuskitBnNet *net, const char *csv_path);
char *nxuskit_bn_search_structure(const struct NxuskitBnNet *net,
                                  const char *csv_path,
                                  const char *algorithm,
                                  const char *scoring,
                                  uint32_t max_parents,
                                  uint32_t max_steps,
                                  double ess,
                                  const char *ordering_json);
bool nxuskit_solver_solve_stream(struct NxuskitSolverSession *session,
                                 const char *config_json,
                                 int32_t (*on_chunk)(const char*, void*),
                                 void (*on_done)(const char*, void*),
                                 void *user_data);
char *nxuskit_zen_evaluate(const char *model_json, const char *input_json);
void nxuskit_zen_free_result(char *result);