packages/nxuskit/src/ffi.rs

//! Raw FFI declarations for the nxusKit C ABI.
//!
//! This module is private — consumers interact only with safe wrapper types.
//! All `unsafe` code in the crate is confined to this module and its callers
//! in `provider.rs`, `stream.rs`, and `clips.rs`.

use std::ffi::{c_char, c_int, c_void};

// ---------------------------------------------------------------------------
// Cross-feature dispatch macro
// ---------------------------------------------------------------------------

/// Dispatch a C ABI call through either static linking or dynamic linking.
///
/// Under `static-link`, calls the function directly via the extern block.
/// Under `dynamic-link`, calls through the function pointer table loaded at
/// runtime.
///
/// # Safety
///
/// The caller must ensure all arguments satisfy the C ABI contract for the
/// target function.
macro_rules! ffi_call {
    ($fn_name:ident $(, $arg:expr)*) => {{
        #[cfg(feature = "static-link")]
        {
            unsafe { $crate::ffi::$fn_name($($arg),*) }
        }
        #[cfg(feature = "dynamic-link")]
        {
            let sdk = $crate::ffi::dynamic::sdk_unchecked();
            unsafe { (sdk.$fn_name)($($arg),*) }
        }
    }};
}

pub(crate) use ffi_call;

// ---------------------------------------------------------------------------
// Opaque C types
// ---------------------------------------------------------------------------

/// Opaque provider handle (owned by the SDK).
#[repr(C)]
pub(crate) struct NxuskitProvider {
    _opaque: [u8; 0],
}

/// Opaque response handle (owned by the SDK).
#[repr(C)]
pub(crate) struct NxuskitResponse {
    _opaque: [u8; 0],
}

/// Opaque stream handle (owned by the SDK).
#[repr(C)]
pub(crate) struct NxuskitStream {
    _opaque: [u8; 0],
}

// ---------------------------------------------------------------------------
// Solver SDK opaque C types
// ---------------------------------------------------------------------------

/// Opaque solver session handle (owned by the SDK).
#[repr(C)]
pub(crate) struct NxuskitSolverSession {
    _opaque: [u8; 0],
}

// ---------------------------------------------------------------------------
// Bayesian Network SDK opaque C types
// ---------------------------------------------------------------------------

/// Opaque Bayesian Network handle (owned by the SDK).
#[repr(C)]
pub(crate) struct NxuskitBnNet {
    _opaque: [u8; 0],
}

/// Opaque Bayesian Network evidence handle (owned by the SDK).
#[repr(C)]
pub(crate) struct NxuskitBnEvidence {
    _opaque: [u8; 0],
}

/// Opaque Bayesian Network result handle (owned by the SDK).
#[repr(C)]
pub(crate) struct NxuskitBnResult {
    _opaque: [u8; 0],
}

// ---------------------------------------------------------------------------
// Callback type aliases
// ---------------------------------------------------------------------------

/// Callback invoked for each streaming chunk.
/// Return 0 to continue, non-zero to cancel the stream.
pub(crate) type NxuskitStreamCallback =
    unsafe extern "C" fn(chunk_json: *const c_char, user_data: *mut c_void) -> c_int;

/// Callback invoked when the stream completes.
pub(crate) type NxuskitStreamDoneCallback =
    unsafe extern "C" fn(final_json: *const c_char, user_data: *mut c_void);

// ---------------------------------------------------------------------------
// Static linking: extern "C" declarations resolved at link time
// ---------------------------------------------------------------------------

#[cfg(feature = "static-link")]
unsafe extern "C" {
    pub(crate) fn nxuskit_version() -> *const c_char;
    pub(crate) fn nxuskit_abi_version() -> *const c_char;
    pub(crate) fn nxuskit_edition() -> *const c_char;
    pub(crate) fn nxuskit_capabilities() -> *mut c_char;
    pub(crate) fn nxuskit_build_info() -> *mut c_char;
    pub(crate) fn nxuskit_entitlement_info(license_key: *const c_char) -> *mut c_char;

    // License functions
    pub(crate) fn nxuskit_license_resolve(explicit_key: *const c_char) -> *mut c_char;
    pub(crate) fn nxuskit_license_validate(token_jwt: *const c_char) -> *mut c_char;
    pub(crate) fn nxuskit_license_machine_id() -> *mut c_char;
    pub(crate) fn nxuskit_license_activate(purchase_id: *const c_char) -> *mut c_char;
    pub(crate) fn nxuskit_license_deactivate() -> *mut c_char;
    pub(crate) fn nxuskit_license_trial_issue() -> *mut c_char;
    pub(crate) fn nxuskit_license_trial_activate(activation_code: *const c_char) -> *mut c_char;

    pub(crate) fn nxuskit_auth_set_credential(
        provider_id: *const c_char,
        api_key: *const c_char,
    ) -> c_int;
    pub(crate) fn nxuskit_auth_remove_credential(provider_id: *const c_char) -> c_int;
    pub(crate) fn nxuskit_auth_resolve(
        provider_id: *const c_char,
        explicit_key: *const c_char,
    ) -> *mut c_char;
    pub(crate) fn nxuskit_auth_status(provider_id: *const c_char) -> *mut c_char;
    pub(crate) fn nxuskit_auth_status_all() -> *mut c_char;
    pub(crate) fn nxuskit_auth_providers() -> *mut c_char;

    pub(crate) fn nxuskit_create_provider(config_json: *const c_char) -> *mut NxuskitProvider;
    pub(crate) fn nxuskit_free_provider(provider: *mut NxuskitProvider);

    pub(crate) fn nxuskit_chat(
        provider: *mut NxuskitProvider,
        request_json: *const c_char,
    ) -> *mut NxuskitResponse;
    pub(crate) fn nxuskit_response_json(response: *const NxuskitResponse) -> *const c_char;
    pub(crate) fn nxuskit_free_response(response: *mut NxuskitResponse);

    pub(crate) fn nxuskit_chat_stream(
        provider: *mut NxuskitProvider,
        request_json: *const c_char,
        on_chunk: NxuskitStreamCallback,
        on_done: NxuskitStreamDoneCallback,
        user_data: *mut c_void,
    ) -> *mut NxuskitStream;
    pub(crate) fn nxuskit_cancel_stream(stream: *mut NxuskitStream);
    pub(crate) fn nxuskit_free_stream(stream: *mut NxuskitStream);

    pub(crate) fn nxuskit_list_models(provider: *mut NxuskitProvider) -> *mut c_char;

    pub(crate) fn nxuskit_last_error() -> *const c_char;
    pub(crate) fn nxuskit_free_string(ptr: *mut c_char);

    // Plugin SDK
    pub(crate) fn nxuskit_plugin_load_dir(dir_path: *const c_char) -> i32;
    pub(crate) fn nxuskit_plugin_list() -> *mut c_char;
    pub(crate) fn nxuskit_plugin_info(name: *const c_char) -> *mut c_char;
    pub(crate) fn nxuskit_plugin_count() -> i32;
    pub(crate) fn nxuskit_plugin_loaded(name: *const c_char) -> i32;
    pub(crate) fn nxuskit_plugin_unload_all();
    pub(crate) fn nxuskit_plugin_set_trust_mode(mode: i32) -> i32;
    pub(crate) fn nxuskit_plugin_get_trust_mode() -> i32;
    pub(crate) fn nxuskit_plugin_load_dir_trusted(dir_path: *const c_char) -> i32;

    // OAuth functions
    pub(crate) fn nxuskit_oauth_start(provider_id: *const c_char, timeout_secs: u32)
    -> *mut c_char;
    pub(crate) fn nxuskit_oauth_status(provider_id: *const c_char) -> *mut c_char;
    pub(crate) fn nxuskit_oauth_revoke(provider_id: *const c_char) -> i32;

    // Bayesian Network SDK
    pub(crate) fn nxuskit_bn_net_create() -> *mut NxuskitBnNet;
    pub(crate) fn nxuskit_bn_net_destroy(net: *mut NxuskitBnNet);
    pub(crate) fn nxuskit_bn_net_load_file(path: *const c_char) -> *mut NxuskitBnNet;
    pub(crate) fn nxuskit_bn_net_num_variables(net: *const NxuskitBnNet) -> i32;
    pub(crate) fn nxuskit_bn_net_variables(net: *const NxuskitBnNet) -> *mut c_char;
    pub(crate) fn nxuskit_bn_net_variable_states(
        net: *const NxuskitBnNet,
        variable: *const c_char,
    ) -> *mut c_char;
    pub(crate) fn nxuskit_bn_ev_create() -> *mut NxuskitBnEvidence;
    pub(crate) fn nxuskit_bn_ev_destroy(ev: *mut NxuskitBnEvidence);
    pub(crate) fn nxuskit_bn_ev_set_discrete(
        ev: *mut NxuskitBnEvidence,
        net: *const NxuskitBnNet,
        variable: *const c_char,
        state: *const c_char,
    ) -> bool;
    pub(crate) fn nxuskit_bn_ev_retract(
        ev: *mut NxuskitBnEvidence,
        variable: *const c_char,
    ) -> bool;
    pub(crate) fn nxuskit_bn_ev_clear(ev: *mut NxuskitBnEvidence) -> bool;
    pub(crate) fn nxuskit_bn_infer(
        net: *const NxuskitBnNet,
        ev: *const NxuskitBnEvidence,
        algorithm: *const c_char,
        num_samples: u32,
        burn_in: u32,
        seed: u64,
    ) -> *mut NxuskitBnResult;
    pub(crate) fn nxuskit_bn_result_destroy(result: *mut NxuskitBnResult);
    pub(crate) fn nxuskit_bn_result_json(result: *const NxuskitBnResult) -> *mut c_char;
    pub(crate) fn nxuskit_bn_result_query(
        result: *const NxuskitBnResult,
        variable: *const c_char,
    ) -> *mut c_char;
    pub(crate) fn nxuskit_bn_result_num_variables(result: *const NxuskitBnResult) -> i32;
    pub(crate) fn nxuskit_bn_result_next(result: *mut NxuskitBnResult) -> *mut c_char;
    pub(crate) fn nxuskit_bn_result_reset(result: *mut NxuskitBnResult);

    // Bayesian Network SDK — Part 2 extensions
    pub(crate) fn nxuskit_bn_net_save_file(net: *const NxuskitBnNet, path: *const c_char) -> bool;
    pub(crate) fn nxuskit_bn_ev_set_continuous(
        ev: *mut NxuskitBnEvidence,
        net: *const NxuskitBnNet,
        variable: *const c_char,
        value: f64,
    ) -> bool;
    pub(crate) fn nxuskit_bn_net_add_gaussian_variable(
        net: *mut NxuskitBnNet,
        name: *const c_char,
        mean_base: f64,
        variance: f64,
    ) -> bool;
    pub(crate) fn nxuskit_bn_net_set_gaussian_weight(
        net: *mut NxuskitBnNet,
        variable: *const c_char,
        parent: *const c_char,
        weight: f64,
    ) -> bool;
    pub(crate) fn nxuskit_bn_result_mean(
        result: *const NxuskitBnResult,
        variable: *const c_char,
    ) -> f64;
    pub(crate) fn nxuskit_bn_result_variance(
        result: *const NxuskitBnResult,
        variable: *const c_char,
    ) -> f64;
    pub(crate) fn nxuskit_bn_result_continuous_marginal(
        result: *const NxuskitBnResult,
        variable: *const c_char,
    ) -> *mut c_char;
    pub(crate) fn nxuskit_bn_infer_with_config(
        net: *const NxuskitBnNet,
        ev: *const NxuskitBnEvidence,
        algorithm: *const c_char,
        config_json: *const c_char,
    ) -> *mut NxuskitBnResult;

    // Bayesian Network SDK — Streaming inference
    pub(crate) fn nxuskit_bn_infer_stream(
        net: *const NxuskitBnNet,
        ev: *const NxuskitBnEvidence,
        num_samples: u32,
        burn_in: u32,
        seed: u64,
        chunk_size: u32,
        on_chunk: Option<
            unsafe extern "C" fn(
                chunk_json: *const c_char,
                iteration: u32,
                total: u32,
                is_final: bool,
                user_data: *mut std::ffi::c_void,
            ) -> bool,
        >,
        user_data: *mut std::ffi::c_void,
    ) -> bool;

    // Bayesian Network SDK — Structure & Parameter Learning
    pub(crate) fn nxuskit_bn_search_structure(
        net: *const NxuskitBnNet,
        csv_path: *const c_char,
        algorithm: *const c_char,
        scoring: *const c_char,
        max_parents: u32,
        max_steps: u32,
        ess: f64,
        ordering_json: *const c_char,
    ) -> *mut c_char;
    pub(crate) fn nxuskit_bn_learn_mle(
        net: *mut NxuskitBnNet,
        csv_path: *const c_char,
        pseudocount: f64,
    ) -> bool;
    pub(crate) fn nxuskit_bn_log_likelihood(
        net: *const NxuskitBnNet,
        csv_path: *const c_char,
    ) -> f64;

    // ZEN SDK: Stateless evaluation
    pub(crate) fn nxuskit_zen_evaluate(
        model_json: *const c_char,
        input_json: *const c_char,
    ) -> *mut c_char;
    pub(crate) fn nxuskit_zen_free_result(result: *mut c_char);
